Updated by task 'AutomatedMDTask_1701292098236_TM-MT_1701292156806'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/analytics.en/commit/b93ff46faff6597884aa9091b1bd65154c97e732

--- a/help/release-notes/2020.md
+++ b/help/release-notes/2020.md
@@ -3,9 +3,9 @@ title: Ver las notas de la versión de Adobe Analytics de 2020
 description: Notas de la versión de Analytics de 2020
 feature: Release Notes
 exl-id: 4a0bb2f4-23dd-4772-80fb-5cffbc80c26b
-source-git-commit: 266cf18050d60f08f7e170c56453d1e1d805cb7b
+source-git-commit: 2eff7656741bdba3d5d7d1f33e9261b59f8e6083
 workflow-type: tm+mt
-source-wordcount: '12342'
+source-wordcount: '12338'
 ht-degree: 98%
 
 ---
@@ -244,8 +244,8 @@ Para obtener las últimas actualizaciones de las versiones de AppMeasurement, co
 
 | Función | [Disponibilidad general](/help/release-notes/releases.md) - Fecha de destino | Descripción |
 | -----------| ---------- |-------|
-| Attribution IQ: Atribución algorítmica | 18 de junio de 2020 | El modelo de [!UICONTROL atribución algorítmica] de Analysis Workspace utiliza técnicas estadísticas para determinar dinámicamente la asignación óptima de crédito para la métrica seleccionada. Disponible para los clientes de Adobe Analytics Ultimate. |
-| Attribution IQ: ventanas retroactivas personalizadas | 18 de junio de 2020 | Ahora puede configurar cualquier modelo de atribución en [!UICONTROL Attribution IQ] para incluir puntos de contacto desde 90 días antes del período de tiempo de la creación de informes. Esto generalmente aumenta la precisión de atribución de eventos que se producen al principio del período de la creación de informes teniendo en cuenta las interacciones que se produjeron en el mes o meses anteriores. Disponible para los clientes de Adobe Analytics Foundation, Select, Prime, Premium, Premium Attribution, Premium Complete y Ultimate. |
+| Atribución: Algorithmic Attribution | 18 de junio de 2020 | El modelo de [!UICONTROL atribución algorítmica] de Analysis Workspace utiliza técnicas estadísticas para determinar dinámicamente la asignación óptima de crédito para la métrica seleccionada. Disponible para los clientes de Adobe Analytics Ultimate. |
+| Atribución: ventanas retrospectivas personalizadas | 18 de junio de 2020 | Ahora puede configurar cualquier modelo de atribución en [!UICONTROL Attribution ] para incluir puntos de contacto desde 90 días antes del período de tiempo de la creación de informes. Esto generalmente aumenta la precisión de atribución de eventos que se producen al principio del período de la creación de informes teniendo en cuenta las interacciones que se produjeron en el mes o meses anteriores. Disponible para los clientes de Adobe Analytics Foundation, Select, Prime, Premium, Premium Attribution, Premium Complete y Ultimate. |
 | Funciones de proyecto para proyectos compartidos de Espacio de trabajo | 18 de junio de 2020 | Al compartir un proyecto del Espacio de trabajo, ahora puede colocar destinatarios en una de las tres funciones de proyecto, según la experiencia del proyecto que desee que tengan: Editar, Duplicado y Vista. [Más información...](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/curate-share/share-projects.html?lang=es) |
 | Proyectos de Workspace solo de vista | 18 de junio de 2020 | Los proyectos de Espacio de trabajo solamente se pueden compartir como &quot;Puede ver&quot;. Cuando un destinatario de Vista abre el proyecto compartido, recibe una experiencia de proyecto más restrictiva sin carril izquierdo e interacciones limitadas. [Más información...](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/curate-share/view-only-projects.html?lang=es) |
 | Capacidad para editar proyectos de Espacio de trabajo de forma conjunta | 18 de junio de 2020 | Los destinatarios añadidos a la función “Puede editar” pueden guardar un proyecto que se haya compartido con ellos. Esto se extiende tanto a los administradores como a los no administradores. [Más información...](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/curate-share/share-projects.html?lang=es) |
@@ -416,7 +416,7 @@ Consulte [Notas de la versión de AppMeasurement para JavaScript](https://experi
 * El despliegue de un nuevo shell solucionó varios problemas con los clientes relacionados con el cambio de organizaciones de Experience Cloud.(AN-200844, AN-186920)
 * Se corrigió un problema en el cual, al realizar un desglose en el elemento de línea _No especificado_ (o en algunos otros elementos de línea de informes) sin incluir _No especificado (Ninguno)_ en los filtros de búsqueda del desglose, no se obtenían resultados en el desglose.
 * Se corrigió un problema que se producía al usar una dimensión clasificada, en el que el total de la métrica de entrada o salida no coincidía con el total del elemento de línea de un desglose.
-* Se corrigió un problema en el cual los modelos de primer y último contacto en Attribution IQ no calculaban correctamente el crédito para algunos elementos de línea en algunas dimensiones predeterminadas.
+* Se corrigió un problema en el cual los modelos de primer y último contacto en Attribution no calculaban correctamente el crédito para algunos elementos de línea en algunas dimensiones predeterminadas.
 * Se corrigió un problema en el cual el desglose de una dimensión de fecha por otra dimensión de fecha devolvía resultados incorrectos.
 * Se ha corregido un problema por el cual, en ocasiones, las métricas de entrada o salida se contaban incorrectamente al aplicarse con el valor &quot;No especificado&quot; en un informe de dimensión clasificado.
 
