--- a/help/release-notes/2023.md
+++ b/help/release-notes/2023.md
@@ -4,10 +4,10 @@ description: Notas de la versión de Analytics de 2023
 feature: Release Notes
 mini-toc-levels: 2
 exl-id: c0d91643-2f2a-4877-b421-cfd42259d4a4
-source-git-commit: c7d0648f43146bb823f49f47be2966c2589839e0
+source-git-commit: abfc67abdba5e35b12a583fafe9a6e42192af631
 workflow-type: tm+mt
-source-wordcount: '11180'
-ht-degree: 100%
+source-wordcount: '11574'
+ht-degree: 99%
 
 ---
 
@@ -15,14 +15,20 @@ ht-degree: 100%
 
 Obtenga información sobre las últimas actualizaciones de la versión para los [productos de Adobe Experience Cloud](https://business.adobe.com/es/products/adobe-experience-cloud-products.html). Obtenga la documentación de autoayuda más reciente: tutoriales y cursos sobre Experience League.
 
+## Diciembre de 2023
+
+| Función | Descripción | [Inicio del despliegue](releases.md) | [Disponibilidad general](releases.md) |
+| ----------- | ---------- | ------- | ---- |
+| **Mejoras del Data Warehouse** | Al crear una solicitud de Data Warehouse, ahora puede configurar una cuenta de la nube para usarla como destino del informe. Los siguientes tipos de cuenta de nube están disponibles para enviar datos:<ul><li>Amazon S3</li><li>Google Cloud Platform</li><li>Azure SAS</li><li>Azure RBAC</li><li>Correo electrónico (esta opción estaba disponible anteriormente)</li></ul>FTP, SFTP, Azure Blob y S3 siguen estando disponibles como destinos de informe, pero ya no se recomiendan.<p>También se ha mejorado la experiencia del usuario al crear y administrar solicitudes de Data Warehouse. Para obtener más información, consulte [Creación de una solicitud de Data Warehouse](/help/export/data-warehouse/create-request/t-dw-create-request.md) y [Administrar solicitudes de Data Warehouse](https://experienceleague.adobe.com/docs/analytics/export/data-warehouse/data-warehouse-requests-manage.html?lang=es). | 12 de septiembre de 2023 | sábado, 15 de diciembre de 2023 |
+
 ## Octubre de 2023 {#oct23}
 
 | Función | Descripción | [Inicio del despliegue](releases.md) | [Disponibilidad general](releases.md) |
 | ----------- | ---------- | ------- | ---- |
 | **Administrador de actividades de creación de informes** | El Administrador de actividades de creación de informes le permite ver la capacidad de creación de informes de cada grupo de informes de su organización.  Proporciona a los administradores una visibilidad detallada del consumo de creación de informes para diagnosticar y corregir fácilmente los problemas de capacidad durante las horas de mayor actividad de creación de informes. A continuación se indican algunas de las mejoras que ahora están disponibles en el Administrador de actividades de creación de informes: <ul><li>Restringir las solicitudes posteriores: además de cancelar las solicitudes actuales, los administradores ahora pueden restringir las solicitudes durante un período de tiempo definido. Los administradores pueden restringir las solicitudes por solicitud, proyecto o usuario.</li><li>Además de las métricas de Utilización y Capacidad, el Administrador de actividades de creación de informes ahora incluye más datos sobre la actividad de creación de informes: columna Complejidad, columna Usuario y columna Conexión.</li><li>Todas las cancelaciones y restricciones realizadas en el administrador de actividades de creación de informes ahora están visibles en el registro de auditoría. Los administradores pueden utilizar el registro de auditoría para ver lo que se ha cancelado actualmente. Las cancelaciones no se pueden revertir en el Administrador de actividades de creación de informes ni en el Registro de auditoría.</li></ul><p>Para obtener más información, consulte [Información general del Administrador de actividades de creación de informes](/help/admin/admin/reporting-activity-manager/reporting-activity-overview.md)</p> | 17 de octubre de 2023 | 23 de octubre de 2023 |
-| **Mejoras del Data Warehouse** | Al crear una solicitud de Data Warehouse, ahora puede configurar una cuenta de la nube para usarla como destino del informe. Los siguientes tipos de cuenta de nube están disponibles para enviar datos:<ul><li>Amazon S3</li><li>Google Cloud Platform</li><li>Azure SAS</li><li>Azure RBAC</li><li>Correo electrónico (esta opción estaba disponible anteriormente)</li></ul>FTP, SFTP, Azure Blob y S3 siguen estando disponibles como destinos de informe, pero ya no se recomiendan.<p>También se ha mejorado la experiencia del usuario al crear y administrar solicitudes de Data Warehouse. Para obtener más información, consulte [Creación de una solicitud de Data Warehouse](/help/export/data-warehouse/create-request/t-dw-create-request.md) y [Administrar solicitudes de Data Warehouse](https://experienceleague.adobe.com/docs/analytics/export/data-warehouse/data-warehouse-requests-manage.html?lang=es). | 12 de septiembre de 2023 | 25 de octubre de 2023 |
+| **Mejoras del Data Warehouse** | Al crear una solicitud de Data Warehouse, ahora puede configurar una cuenta de la nube para usarla como destino del informe. Los siguientes tipos de cuenta de nube están disponibles para enviar datos:<ul><li>Amazon S3</li><li>Google Cloud Platform</li><li>Azure SAS</li><li>Azure RBAC</li><li>Correo electrónico (esta opción estaba disponible anteriormente)</li></ul>FTP, SFTP, Azure Blob y S3 siguen estando disponibles como destinos de informe, pero ya no se recomiendan.<p>También se ha mejorado la experiencia del usuario al crear y administrar solicitudes de Data Warehouse. Para obtener más información, consulte [Creación de una solicitud de Data Warehouse](/help/export/data-warehouse/create-request/t-dw-create-request.md) y [Administrar solicitudes de Data Warehouse](https://experienceleague.adobe.com/docs/analytics/export/data-warehouse/data-warehouse-requests-manage.html?lang=es). | 12 de septiembre de 2023 | sábado, 15 de diciembre de 2023 |
 | **Nuevas columnas disponibles al administrar componentes** | Las siguientes columnas nuevas ya están disponibles al administrar componentes:<ul><li>**Se usa en**: esta columna está disponible en el Administrador de métricas calculadas y el Administrador de segmentos.</li><li>**Último uso**: esta columna está disponible en el Administrador de métricas calculadas, el Administrador de segmentos y el Administrador de alertas.</li></ul>Esta información puede ayudarle a determinar si un componente es valioso para los usuarios de su organización, dónde se utiliza y si debe eliminarse o modificarse. Puede utilizar el diccionario de datos junto con esta información para ayudarle a realizar un seguimiento y comprender mejor cómo se utilizan los componentes en su organización. | 20 de septiembre de 2023 | 4 de octubre de 2023 |
-| **Migrar proyectos de Adobe Analytics y cualquier componente incluido a Customer Journey Analytics** | Ahora puede migrar sus proyectos de Adobe Analytics a Customer Journey Analytics. Este proceso simplifica la transición de Adobe Analytics a Customer Journey Analytics. Al migrar proyectos a Customer Journey Analytics, los recursos se asignan de un grupo de informes de Adobe Analytics a una vista de datos de Customer Journey Analytics. Los proyectos se migran a Customer Journey Analytics desde la interfaz de Adobe Analytics. [Más información](https://experienceleague.adobe.com/docs/analytics/admin/admin-tools/component-migration/prepare-component-migration.html?lang=es?lang=es) | N/A | 9 de octubre de 2023 |
+| **Migrar proyectos de Adobe Analytics y cualquier componente incluido a Customer Journey Analytics** | Ahora puede migrar sus proyectos de Adobe Analytics a Customer Journey Analytics. Este proceso simplifica la transición de Adobe Analytics a Customer Journey Analytics. Al migrar proyectos a Customer Journey Analytics, los recursos se asignan de un grupo de informes de Adobe Analytics a una vista de datos de Customer Journey Analytics. Los proyectos se migran a Customer Journey Analytics desde la interfaz de Adobe Analytics. [Más información](https://experienceleague.adobe.com/docs/analytics/admin/admin-tools/component-migration/prepare-component-migration.html?lang=en) | N/A | 9 de octubre de 2023 |
 
 {style="table-layout:auto"}
 
@@ -34,7 +40,7 @@ AN-313983; AN-324189; AN-325095; AN-325677; AN-325886; AN-326068; AN-326360; AN-
 
 ### Avisos importantes para los administradores de Adobe Analytics
 
-| Aviso | Fecha de incorporación o actualizada | Descripción |
+| Aviso | Fecha de incorporación o actualización | Descripción |
 | ----------- | ---------- | ---------- |
 | **Confusión de IP completa para visitas de Adobe Experience Edge** | 27 de septiembre de 2023 | La confusión de IP para visitas procedentes de Experience Edge se actualizará más adelante en octubre de 2023. En abril, Experience Edge añadió la capacidad de proteger direcciones IP. En ese momento, Adobe Analytics solo admitía la ofuscación parcial de direcciones IP, debido a la forma en que Analytics procesa las visitas de Experience Edge. Cuando los clientes eligieron la ofuscación completa para Experience Edge, Analytics solo recibía direcciones IP parcialmente ofuscadas. Cuando se implemente este cambio, Analytics recibirá la IP totalmente oculta. |
 | **Adobe Analytics Livestream: API de Analytics 2.0** | 27 de septiembre de 2023 | Los clientes ahora pueden acceder a [Guía de punto final de Adobe Analytics Livestream](https://developer.adobe.com/analytics-apis/docs/2.0/guides/endpoints/livestream/) en las API de Adobe Analytics 2.0 en lugar de en su ubicación anterior, con las API 1.4. Observe que los clientes que utilizan las credenciales de JWT de Adobe I/O deben migrar a las credenciales de servidor a servidor de Adobe I/O OAuth de forma predeterminada el 1 de enero de 2025. (Consulte los detalles en los avisos de fin de la vida útil más abajo). |
@@ -99,7 +105,7 @@ AN-315605; AN-316306; AN-317494; AN-317844; AN-320424; AN-320597; AN-320680; AN-
 
 ### Avisos importantes para los administradores de Adobe Analytics
 
-| Aviso | Fecha de incorporación o actualizada | Descripción |
+| Aviso | Fecha de incorporación o actualización | Descripción |
 | ----------- | ---------- | ---------- |
 | **Compatibilidad con la recepción de direcciones IP ocultas** | 27 de septiembre de 2023 | Se actualizará la ofuscación de IP para las visitas procedentes de Experience Edge. En abril de 2023, Experience Edge añadió la capacidad de proteger direcciones IP. En ese momento, Adobe Analytics solo admitía la ofuscación parcial de direcciones IP, debido a la forma en que Analytics procesa las visitas de Experience Edge. Cuando los clientes eligieron la ofuscación completa para Experience Edge, Analytics solo recibía direcciones IP parcialmente ofuscadas. Con este cambio, Analytics recibirá ahora la IP totalmente oculta. |
 | **Caducidad de 37 meses de los ID de compra y los ID de evento (serialización de eventos)** | 10 de julio de 2023 | Una próxima versión del motor de procesamiento de visitas de Analytics, prevista para su lanzamiento el **13 de julio de 2023**, empezará a aplicar una caducidad de 37 meses para los ID de compra y los ID de evento (serialización de eventos). Actualmente, los ID de compra y los ID de evento nunca caducan en Adobe Analytics. Una vez que se veía/utilizaba un ID de compra o ID de evento, cualquier visita futura, sin importar cuándo, tenía esa compra o evento marcado como duplicado. Con la nueva versión del motor de procesamiento:<ul><li>Los ID de compra y los ID de evento siempre caducan pasados 37 meses.</li><li>Si han pasado 37 meses desde que se vio el ID de compra o el ID de evento, ya no se considera una compra o evento duplicado.</li><li> Si está &quot;reutilizando&quot; los ID de compra o ID de evento de hace más de 37 meses, ya no se consideran duplicados.</li></ul> |
@@ -135,7 +141,7 @@ AN-307816; AN-318111; AN-318584; AN-318828; AN-320440; AN-320568; AN-320616; AN-
 
 ### Avisos importantes para los administradores de Adobe Analytics
 
-| Aviso | Fecha de incorporación o actualizada | Descripción |
+| Aviso | Fecha de incorporación o actualización | Descripción |
 | ----------- | ---------- | ---------- |
 | **Caducidad de 37 meses de los ID de compra y los ID de evento (serialización de eventos)** | 10 de julio de 2023 | Una próxima versión del motor de procesamiento de visitas de Analytics, prevista para su lanzamiento el **13 de julio de 2023**, empezará a aplicar una caducidad de 37 meses para los ID de compra y los ID de evento (serialización de eventos). Actualmente, los ID de compra y los ID de evento nunca caducan en Adobe Analytics. Una vez que se vea/utilice un ID de compra o ID de evento, cualquier visita futura, independientemente de cuándo, tendrá esa compra o evento marcado como duplicado. Con la nueva versión del motor de procesamiento:<ul><li>Los ID de compra y los ID de evento siempre caducan pasados 37 meses.</li><li>Si han pasado 37 meses desde que se vio el ID de compra o el ID de evento, ya no se considera una compra o evento duplicado.</li><li> Si está &quot;reutilizando&quot; los ID de compra o ID de evento de hace más de 37 meses, ya no se consideran duplicados.</li></ul> |
 | **Migración a las credenciales de servidor a servidor de Adobe I/O OAuth** | 11 de mayo de 2023 | Los clientes de la API de Adobe Analytics y Livestream que utilizan las credenciales de JWT de Adobe I/O deben migrar a las credenciales de servidor a servidor de Adobe I/O OAuth de forma predeterminada el **1 de enero de 2025**. Para obtener más información y cronologías, consulte el aviso de fin de vida útil en la tabla siguiente. |
@@ -177,7 +183,7 @@ AN-311878; AN-313968; AN-314130; AN-315701; AN-315761; AN-316613; AN-317563; AN-
 
 ### Avisos importantes para los administradores de Adobe 
 
-| Aviso | Fecha de incorporación o actualizada | Descripción |
+| Aviso | Fecha de incorporación o actualización | Descripción |
 | ----------- | ---------- | ---------- |
 | **Caducidad de 37 meses de los ID de compra y los ID de evento (serialización de eventos)** | 10 de julio de 2023 | Una próxima versión del motor de procesamiento de visitas de Analytics, prevista para su lanzamiento el **13 de julio de 2023**, empezará a aplicar una caducidad de 37 meses para los ID de compra y los ID de evento (serialización de eventos). Actualmente, los ID de compra y los ID de evento nunca caducan en Adobe Analytics. Una vez que se vea/utilice un ID de compra o ID de evento, cualquier visita futura, independientemente de cuándo, tendrá esa compra o evento marcado como duplicado. Con la nueva versión del motor de procesamiento:<ul><li>Los ID de compra y los ID de evento siempre caducan pasados 37 meses.</li><li>Si han pasado 37 meses desde que se vio el ID de compra o el ID de evento, ya no se considera una compra o evento duplicado.</li><li> Si está &quot;reutilizando&quot; los ID de compra o ID de evento de hace más de 37 meses, ya no se consideran duplicados.</li></ul> |
 | **Migración a las credenciales de servidor a servidor de Adobe I/O OAuth** | 11 de mayo de 2023 | Los clientes de la API de Adobe Analytics y Livestream que utilizan las credenciales de JWT de Adobe I/O deben migrar a las credenciales de servidor a servidor de OAuth de Adobe I/O de **1 de enero de 2025**. Para obtener más información y cronologías, consulte el aviso de fin de vida útil en la tabla siguiente. |
@@ -211,7 +217,7 @@ AN-312098; AN-318309; AN-316675; AN-318173; AN-310359; AN-317613; AN-318836; AN-
 
 ### Avisos importantes para los administradores de Adobe Analytics
 
-| Aviso | Fecha de incorporación o actualizada | Descripción |
+| Aviso | Fecha de incorporación o actualización | Descripción |
 | ----------- | ---------- | ---------- |
 | **Caducidad de 37 meses de los ID de compra y los ID de evento (serialización de eventos)** | 25 de mayo de 2023 | Una próxima versión del motor de procesamiento de visitas de Analytics, prevista para su lanzamiento a **finales de junio de 2023 o principios de julio de 2023**, empezará a aplicar una caducidad de 37 meses para los ID de compra y los ID de evento (serialización de eventos). Actualmente, los ID de compra y los ID de evento nunca caducan en Adobe Analytics. Una vez que se vea/utilice un ID de compra o ID de evento, cualquier visita futura, independientemente de cuándo, tendrá esa compra o evento marcado como duplicado. Con la nueva versión del motor de procesamiento:<ul><li>Los ID de compra y los ID de evento siempre caducan pasados 37 meses.</li><li>Si han pasado 37 meses desde que se vio el ID de compra o el ID de evento, ya no se considera una compra o evento duplicado.</li><li> Si está &quot;reutilizando&quot; los ID de compra o ID de evento de hace más de 37 meses, ya no se consideran duplicados.</li></ul> |
 | **Migración a las credenciales de servidor a servidor de Adobe I/O OAuth** | 11 de mayo de 2023 | Los clientes de la API de Adobe Analytics y Livestream que utilizan las credenciales de JWT de Adobe I/O deben migrar a las credenciales de servidor a servidor de Adobe I/O OAuth de forma predeterminada el **1 de enero de 2025**. Para obtener más información y cronologías, consulte el aviso de fin de vida útil en la tabla siguiente. |
@@ -261,7 +267,7 @@ AN-288373; AN-305144; AN-309023; AN-310466; AN-311686; AN-311705; AN-312018; AN-
 
 ## Avisos importantes para los administradores de Adobe Analytics
 
-| Aviso | Fecha de incorporación o actualizada | Descripción |
+| Aviso | Fecha de incorporación o actualización | Descripción |
 | ----------- | ---------- | ---------- |
 | **Aviso: Uso de nuevas IP por las fuentes de datos de Adobe Analytics y la salida de Data Warehouse en el Centro de datos de Londres** | 27 de abril de 2023 | Los clientes del Centro de datos de Londres que tengan solicitudes de fuentes de datos o informes de Data Warehouse que se envíen a un servicio FTP/SFTP deberán añadir los siguientes intervalos de direcciones IP a la configuración del cortafuegos para permitir el acceso: <ul><li>`130.248.244.32/29`</li><li>`130.248.244.40/29`</li></ul> |
 | **Actualización de las búsquedas de dispositivos en torno a las sugerencias del cliente de Google** | 27 de febrero de 2023 | El uso de sugerencias del cliente, planificado para el 16 de febrero de 2023, se pospuso para garantizar mejor la calidad de las búsquedas de dispositivos mediante sugerencias. El 27 de febrero de 2023, procedimos con la primera fase de la versión para admitir Sugerencias del cliente. La segunda y última fase de la versión se completó el jueves, 2 de marzo de 2023. [Más información](/help/technotes/client-hints.md) |
@@ -300,7 +306,7 @@ AN-308177; AN-308727; AN-308846; AN-309591; AN-310614; AN-311544; AN-311570; AN-
 
 ### Avisos importantes para los administradores de Adobe Analytics
 
-| Aviso | Fecha de incorporación o actualizada | Descripción |
+| Aviso | Fecha de incorporación o actualización | Descripción |
 | ----------- | ---------- | ---------- |
 | **Actualización del proceso de búsqueda de dispositivos** | 2 de marzo de 2023 | Como parte del despliegue de soporte de sugerencias del cliente, Adobe ahora se ha asociado con DeviceAtlas para todas las búsquedas de dispositivos. Anteriormente, la asociación con DeviceAtlas solo incluía búsquedas de dispositivos móviles. Como parte de ese despliegue, algunos sistemas operativos de escritorio no se etiquetaron correctamente con el texto `"mobile"`. Por ejemplo, un elemento de dimensión muestra `"Mobile OS X 10.15.7"` en lugar de `"OS X 10.15.7 "`. Adobe tiene previsto corregir estos nombres en la versión de abril. Los informes de Analytics y Customer Journey Analytics se actualizan de forma retroactiva. Para [!UICONTROL Fuentes de datos], el cambio es retroactivo si se almacena y se utiliza el ID del sistema operativo al que se hace referencia en la búsqueda. Sin embargo, si se realiza la búsqueda y se almacena el valor real del sistema operativo en los datos, el cambio no será retroactivo. |
 | **Cambio en la granularidad del sistema operativo** | 2 de marzo de 2023 | La versión de parche del sistema operativo ahora se ha incluido en la dimensión [Sistema operativo](../components/dimensions/operating-systems.md). Por ejemplo, un usuario con `OS X 10.15.7`, anteriormente aparecía como `"OS X 10.15"`, pero ahora aparece como `"OS X 10.15.7"`. |
@@ -340,7 +346,7 @@ AN-308177; AN-308727; AN-308846; AN-309591; AN-310614; AN-311544; AN-311570; AN-
 
 ### Avisos importantes para los administradores de Adobe Analytics
 
-| Aviso | Fecha de incorporación o actualizada | Descripción |
+| Aviso | Fecha de incorporación o actualización | Descripción |
 | ----------- | ---------- | ---------- |
 | **Actualización de las búsquedas de dispositivos en torno a las sugerencias del cliente de Google** | 27 de febrero de 2023 | El uso de sugerencias del cliente, planificado para el 16 de febrero de 2023, se pospuso para garantizar mejor la calidad de las búsquedas de dispositivos mediante sugerencias. El 27 de febrero de 2023 se realizará la primera fase de la versión para ofrecer compatibilidad con Sugerencias del cliente. Si todo va bien, pasaremos a la segunda y última fase de la versión el jueves 2 de marzo de 2023. [Más información](/help/technotes/client-hints.md) |
 | **Disponibilidad del conector de origen de Analytics** | 15 de febrero de 2023 | El 28 de febrero de 2023, el conector de origen de Analytics estará disponible en el nuevo centro de datos de Adobe Experience Platform situado en Canadá. |
@@ -377,7 +383,7 @@ AN-282634; AN-289684; AN-299597; AN-299630; AN-300128; AN-301633; AN-301683; AN-
 
 ### Avisos importantes para los administradores de Adobe Analytics
 
-| Aviso | Fecha de incorporación o actualizada | Descripción |
+| Aviso | Fecha de incorporación o actualización | Descripción |
 | ----------- | ---------- | ---------- |
 | **Actualización de las búsquedas de dispositivos debido a las sugerencias del cliente de Google** | 25 de enero de 2023 | El uso de sugerencias del cliente en la búsqueda de dispositivos se iniciará el **16 de febrero de 2023**. <p> <p>Desde octubre de 2022, es posible recopilar sugerencias del cliente con las bibliotecas de SDK web o JavaScript de AppMeasurement. Sin embargo, las sugerencias del cliente no se incorporarán a la búsqueda de dispositivos hasta febrero de 2023. En esa fecha, Adobe empezará a utilizar sugerencias del cliente, además del agente de usuario, al obtener determinada información de los dispositivos para las visitas procedentes de exploradores Chromium, como Google Chrome y Microsoft Edge. Esto es en respuesta al plan de Google de reducir gradualmente la información presentada desde la cadena del agente de usuario en lugar de los datos pasados a través de sugerencias del cliente. <p> <p>Como parte de este cambio, Adobe utilizará Device Atlas para todas las búsquedas de dispositivos relacionadas con el agente de usuario. [Más información](/help/technotes/client-hints.md) |
 | **Convenciones de nomenclatura actualizadas para la dimensión [Exploradores](../components/dimensions/browser.md)** | 17 de enero de 2023 | A partir de la versión 110 de los exploradores Chrome, Edge y Firefox, el nombre de la empresa ya no aparece antes del explorador. Esto podría afectar a los informes si tiene definiciones de segmentos basadas en el nombre del explorador. Por ejemplo, un segmento que incluye una definición de que &quot;el explorador contiene &quot;Google&quot; ya no identifica los exploradores Chrome que empiezan por la versión 110. Además, a partir de Chrome 110, las versiones para móviles y no móviles de Chrome están etiquetadas igual. Anteriormente, las versiones para móviles y no móviles se etiquetaban de forma independiente. Puede utilizar la segmentación y los desgloses móviles para comparar el tráfico móvil y no móvil. |
