Updated by task 'AutomatedMDTask_1705691408374_TM-MT_1705691459610'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/analytics.en/commit/3d1c40809f93e400de0cbbae82161e7af4a78099

--- a/help/release-notes/2023.md
+++ b/help/release-notes/2023.md
@@ -4,9 +4,9 @@ description: Notas de la versión de Analytics de 2023
 feature: Release Notes
 mini-toc-levels: 2
 exl-id: c0d91643-2f2a-4877-b421-cfd42259d4a4
-source-git-commit: abfc67abdba5e35b12a583fafe9a6e42192af631
+source-git-commit: 99156dd9d898ce0abf214561cb0040c647d7e6ab
 workflow-type: tm+mt
-source-wordcount: '11574'
+source-wordcount: '11572'
 ht-degree: 99%
 
 ---
@@ -387,7 +387,7 @@ AN-282634; AN-289684; AN-299597; AN-299630; AN-300128; AN-301633; AN-301683; AN-
 | ----------- | ---------- | ---------- |
 | **Actualización de las búsquedas de dispositivos debido a las sugerencias del cliente de Google** | 25 de enero de 2023 | El uso de sugerencias del cliente en la búsqueda de dispositivos se iniciará el **16 de febrero de 2023**. <p> <p>Desde octubre de 2022, es posible recopilar sugerencias del cliente con las bibliotecas de SDK web o JavaScript de AppMeasurement. Sin embargo, las sugerencias del cliente no se incorporarán a la búsqueda de dispositivos hasta febrero de 2023. En esa fecha, Adobe empezará a utilizar sugerencias del cliente, además del agente de usuario, al obtener determinada información de los dispositivos para las visitas procedentes de exploradores Chromium, como Google Chrome y Microsoft Edge. Esto es en respuesta al plan de Google de reducir gradualmente la información presentada desde la cadena del agente de usuario en lugar de los datos pasados a través de sugerencias del cliente. <p> <p>Como parte de este cambio, Adobe utilizará Device Atlas para todas las búsquedas de dispositivos relacionadas con el agente de usuario. [Más información](/help/technotes/client-hints.md) |
 | **Convenciones de nomenclatura actualizadas para la dimensión [Exploradores](../components/dimensions/browser.md)** | 17 de enero de 2023 | A partir de la versión 110 de los exploradores Chrome, Edge y Firefox, el nombre de la empresa ya no aparece antes del explorador. Esto podría afectar a los informes si tiene definiciones de segmentos basadas en el nombre del explorador. Por ejemplo, un segmento que incluye una definición de que &quot;el explorador contiene &quot;Google&quot; ya no identifica los exploradores Chrome que empiezan por la versión 110. Además, a partir de Chrome 110, las versiones para móviles y no móviles de Chrome están etiquetadas igual. Anteriormente, las versiones para móviles y no móviles se etiquetaban de forma independiente. Puede utilizar la segmentación y los desgloses móviles para comparar el tráfico móvil y no móvil. |
-| **Pausa de informes programados en Reports &amp; Analytics** | 6 de enero de 2023 | Este es un recordatorio de que Adobe dejará de usar estas funciones el **31 de enero de 2023**. Tenga en cuenta que los plazos de caducidad para los informes y los extractos de datos seguirán estando limitados a nueve meses; la entrega de informes y extracciones de datos se pausará al final de este periodo a menos que se reactive la programación.<p>Para reiterar, estas funciones quedarán obsoletas el 31 de enero de 2023. Antes de esta fecha, debe migrar los informes programados a uno de los demás mecanismos disponibles en Adobe Analytics. Para obtener más información o ayuda, póngase en contacto con el Servicio de atención al cliente de Adobe. [Más información](/help/analyze/reports-analytics/scheduled-reports-eol.md) |
+| **Pausa de informes programados en Reports &amp; Analytics** | 6 de enero de 2023 | Este es un recordatorio de que Adobe dejará de usar estas funciones el **31 de enero de 2023**. Tenga en cuenta que los plazos de caducidad para los informes y los extractos de datos seguirán estando limitados a nueve meses; la entrega de informes y extracciones de datos se pausará al final de este periodo a menos que se reactive la programación.<p>Para reiterar, estas funciones quedarán obsoletas el 31 de enero de 2023. Antes de esta fecha, debe migrar los informes programados a uno de los demás mecanismos disponibles en Adobe Analytics. Para obtener más información o ayuda, póngase en contacto con el Servicio de atención al cliente de Adobe. |
 | **Pausa de tareas programadas en el Report Builder** | 6 de enero de 2023 | El **31 de enero de 2023**, Adobe implementó cambios en las tareas programadas en Report Builder como parte de nuestros esfuerzos de optimización del rendimiento y la entrega. Estos cambios incluían la eliminación de la capacidad de que los envíos programados “terminen después de x incidencias”.<p>Puede continuar programando tareas de Report Builder por hora y hacer que finalicen después de un máximo de 99 incidencias. Tenga en cuenta que la reversión solo se aplica a tareas por hora; el evento “terminar después de x incidencias” permanecerá no disponible para todos los demás intervalos de entrega (diario, semanal, mensual y anual). Tenga en cuenta que esta opción quedará obsoleta el 31 de enero de 2023. Para obtener más información o ayuda, póngase en contacto con el Servicio de atención al cliente de Adobe. [Más información](/help/analyze/report-builder/r-arb-scheduled-reports.md) |
 | **Asignación de IP a geolocalización mejorada** | 4 de enero de 2023 | Nuestro proveedor de búsquedas de IP, Digital Element, está actualizando a un nuevo conjunto de datos mejorado (NetAcuity Pulse) para la asignación de IP a geolocalización. Originalmente planificado para octubre de 2022, Adobe Analytics adoptó este nuevo conjunto de datos el **11 de enero de 2023**. La nueva base de datos es más precisa que las versiones anteriores. Algunas asignaciones de IP a regiones cambian o mejoran al adoptarse la nueva base de datos.<p>Todas las herramientas de Adobe Analytics (Analysis Workspace, Reports &amp; Analytics, API de informes, Data Warehouse, LiveStream, fuentes de datos de Analytics, etc.) aprovechan automáticamente las nuevas asignaciones mejoradas. No hay cambios en el formato de los datos en las fuentes de datos. Los datos de Customer Journey Analytics proporcionados a través del conector de origen de Analytics también aprovechan automáticamente las nuevas asignaciones. |
 | **Actualización de la nueva base de datos de operadores de NetAcuity** | 4 de enero de 2023 | Esta actualización, originalmente planificada para el 5 de octubre de 2022, se ha realizado el **11 de enero de 2023**. La información relacionada con el operador de telefonía se almacena en el campo `carrier` en Adobe Analytics Data Warehouse y las fuentes de datos de Analytics cambiarán. Históricamente, el formato de datos de esa columna se ha `<domain>:<ISP>`. Adobe ha mantenido una tabla de búsqueda interna para asignar estos valores `<domain>:<ISP>` en nombres de operadores para la creación de informes en las herramientas con este fin de Adobe Analytics (Analysis Workspace, Reports &amp; Analytics, API de informes, Data Warehouse, LiveStream, etc.). El archivo de búsqueda (`carrier.tsv`) también se proporciona con fuentes de datos para que pueda utilizar las mismas asignaciones.<p>Esta actualización del estado mejora nuestras asignaciones de operadores mediante el uso de una base de datos de operadores más precisa de NetAcuity. El formato de los datos de la columna de operador de las fuentes de datos cambia de ahora en adelante. En lugar de `<domain>:<ISP>`, contiene un nombre de operador. Adobe sigue utilizando la tabla de búsqueda para mantener la mayor continuidad posible con los informes anteriores. Herramientas de creación de informes donde Adobe aplica las búsquedas (Analysis Workspace, Reports &amp; Analytics, API de informes, Data Warehouse, LiveStream, etc.) se beneficia de asignaciones más precisas. Algunas asignaciones, especialmente para dominios internacionales e ISP, cambian más que otras cuando Adobe adopta la nueva base de datos. El archivo de búsqueda del operador de fuentes de datos (`carrier.tsv`) mantiene las asignaciones antiguas y añade las nuevas.<p>El conector de origen de Analytics no asigna actualmente el campo del operador, por lo que el sistema de informes del operador no está disponible actualmente en Experience Platform, Customer Journey Analytics, etc. Por lo tanto, el uso de la nueva base de datos de operadores no afecta a nada en Experience Platform que se base en los datos proporcionados por el conector de origen de Analytics. |
