Updating Old File for core commit 5e1f96af2d3c046be4cb7b7eb964eacff1e52559

--- a/help/release-notes/2023.md
+++ b/help/release-notes/2023.md
@@ -5,9 +5,9 @@ feature: Release Notes
 mini-toc-levels: 2
 exl-id: c0d91643-2f2a-4877-b421-cfd42259d4a4
 source-git-commit: 99156dd9d898ce0abf214561cb0040c647d7e6ab
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '11572'
-ht-degree: 99%
+ht-degree: 100%
 
 ---
 
@@ -19,16 +19,16 @@ Obtenga información sobre las últimas actualizaciones de la versión para los 
 
 | Función | Descripción | [Inicio del despliegue](releases.md) | [Disponibilidad general](releases.md) |
 | ----------- | ---------- | ------- | ---- |
-| **Mejoras del Data Warehouse** | Al crear una solicitud de Data Warehouse, ahora puede configurar una cuenta de la nube para usarla como destino del informe. Los siguientes tipos de cuenta de nube están disponibles para enviar datos:<ul><li>Amazon S3</li><li>Google Cloud Platform</li><li>Azure SAS</li><li>Azure RBAC</li><li>Correo electrónico (esta opción estaba disponible anteriormente)</li></ul>FTP, SFTP, Azure Blob y S3 siguen estando disponibles como destinos de informe, pero ya no se recomiendan.<p>También se ha mejorado la experiencia del usuario al crear y administrar solicitudes de Data Warehouse. Para obtener más información, consulte [Creación de una solicitud de Data Warehouse](/help/export/data-warehouse/create-request/t-dw-create-request.md) y [Administrar solicitudes de Data Warehouse](https://experienceleague.adobe.com/docs/analytics/export/data-warehouse/data-warehouse-requests-manage.html?lang=es). | 12 de septiembre de 2023 | sábado, 15 de diciembre de 2023 |
+| **Mejoras del Data Warehouse** | Al crear una solicitud de Data Warehouse, ahora puede configurar una cuenta de la nube para usarla como destino del informe. Los siguientes tipos de cuenta de nube están disponibles para enviar datos:<ul><li>Amazon S3</li><li>Google Cloud Platform</li><li>Azure SAS</li><li>Azure RBAC</li><li>Correo electrónico (esta opción estaba disponible anteriormente)</li></ul>FTP, SFTP, Azure Blob y S3 siguen estando disponibles como destinos de informe, pero ya no se recomiendan.<p>También se ha mejorado la experiencia del usuario al crear y administrar solicitudes de Data Warehouse. Para obtener más información, consulte [Creación de una solicitud de Data Warehouse](/help/export/data-warehouse/create-request/t-dw-create-request.md) y [Administrar solicitudes de Data Warehouse](https://experienceleague.adobe.com/docs/analytics/export/data-warehouse/data-warehouse-requests-manage.html?lang=es). | 12 de septiembre de 2023 | 15 de diciembre de 2023 |
 
 ## Octubre de 2023 {#oct23}
 
 | Función | Descripción | [Inicio del despliegue](releases.md) | [Disponibilidad general](releases.md) |
 | ----------- | ---------- | ------- | ---- |
 | **Administrador de actividades de creación de informes** | El Administrador de actividades de creación de informes le permite ver la capacidad de creación de informes de cada grupo de informes de su organización.  Proporciona a los administradores una visibilidad detallada del consumo de creación de informes para diagnosticar y corregir fácilmente los problemas de capacidad durante las horas de mayor actividad de creación de informes. A continuación se indican algunas de las mejoras que ahora están disponibles en el Administrador de actividades de creación de informes: <ul><li>Restringir las solicitudes posteriores: además de cancelar las solicitudes actuales, los administradores ahora pueden restringir las solicitudes durante un período de tiempo definido. Los administradores pueden restringir las solicitudes por solicitud, proyecto o usuario.</li><li>Además de las métricas de Utilización y Capacidad, el Administrador de actividades de creación de informes ahora incluye más datos sobre la actividad de creación de informes: columna Complejidad, columna Usuario y columna Conexión.</li><li>Todas las cancelaciones y restricciones realizadas en el administrador de actividades de creación de informes ahora están visibles en el registro de auditoría. Los administradores pueden utilizar el registro de auditoría para ver lo que se ha cancelado actualmente. Las cancelaciones no se pueden revertir en el Administrador de actividades de creación de informes ni en el Registro de auditoría.</li></ul><p>Para obtener más información, consulte [Información general del Administrador de actividades de creación de informes](/help/admin/admin/reporting-activity-manager/reporting-activity-overview.md)</p> | 17 de octubre de 2023 | 23 de octubre de 2023 |
-| **Mejoras del Data Warehouse** | Al crear una solicitud de Data Warehouse, ahora puede configurar una cuenta de la nube para usarla como destino del informe. Los siguientes tipos de cuenta de nube están disponibles para enviar datos:<ul><li>Amazon S3</li><li>Google Cloud Platform</li><li>Azure SAS</li><li>Azure RBAC</li><li>Correo electrónico (esta opción estaba disponible anteriormente)</li></ul>FTP, SFTP, Azure Blob y S3 siguen estando disponibles como destinos de informe, pero ya no se recomiendan.<p>También se ha mejorado la experiencia del usuario al crear y administrar solicitudes de Data Warehouse. Para obtener más información, consulte [Creación de una solicitud de Data Warehouse](/help/export/data-warehouse/create-request/t-dw-create-request.md) y [Administrar solicitudes de Data Warehouse](https://experienceleague.adobe.com/docs/analytics/export/data-warehouse/data-warehouse-requests-manage.html?lang=es). | 12 de septiembre de 2023 | sábado, 15 de diciembre de 2023 |
+| **Mejoras del Data Warehouse** | Al crear una solicitud de Data Warehouse, ahora puede configurar una cuenta de la nube para usarla como destino del informe. Los siguientes tipos de cuenta de nube están disponibles para enviar datos:<ul><li>Amazon S3</li><li>Google Cloud Platform</li><li>Azure SAS</li><li>Azure RBAC</li><li>Correo electrónico (esta opción estaba disponible anteriormente)</li></ul>FTP, SFTP, Azure Blob y S3 siguen estando disponibles como destinos de informe, pero ya no se recomiendan.<p>También se ha mejorado la experiencia del usuario al crear y administrar solicitudes de Data Warehouse. Para obtener más información, consulte [Creación de una solicitud de Data Warehouse](/help/export/data-warehouse/create-request/t-dw-create-request.md) y [Administrar solicitudes de Data Warehouse](https://experienceleague.adobe.com/docs/analytics/export/data-warehouse/data-warehouse-requests-manage.html?lang=es). | 12 de septiembre de 2023 | 15 de diciembre de 2023 |
 | **Nuevas columnas disponibles al administrar componentes** | Las siguientes columnas nuevas ya están disponibles al administrar componentes:<ul><li>**Se usa en**: esta columna está disponible en el Administrador de métricas calculadas y el Administrador de segmentos.</li><li>**Último uso**: esta columna está disponible en el Administrador de métricas calculadas, el Administrador de segmentos y el Administrador de alertas.</li></ul>Esta información puede ayudarle a determinar si un componente es valioso para los usuarios de su organización, dónde se utiliza y si debe eliminarse o modificarse. Puede utilizar el diccionario de datos junto con esta información para ayudarle a realizar un seguimiento y comprender mejor cómo se utilizan los componentes en su organización. | 20 de septiembre de 2023 | 4 de octubre de 2023 |
-| **Migrar proyectos de Adobe Analytics y cualquier componente incluido a Customer Journey Analytics** | Ahora puede migrar sus proyectos de Adobe Analytics a Customer Journey Analytics. Este proceso simplifica la transición de Adobe Analytics a Customer Journey Analytics. Al migrar proyectos a Customer Journey Analytics, los recursos se asignan de un grupo de informes de Adobe Analytics a una vista de datos de Customer Journey Analytics. Los proyectos se migran a Customer Journey Analytics desde la interfaz de Adobe Analytics. [Más información](https://experienceleague.adobe.com/docs/analytics/admin/admin-tools/component-migration/prepare-component-migration.html?lang=en) | N/A | 9 de octubre de 2023 |
+| **Migrar proyectos de Adobe Analytics y cualquier componente incluido a Customer Journey Analytics** | Ahora puede migrar sus proyectos de Adobe Analytics a Customer Journey Analytics. Este proceso simplifica la transición de Adobe Analytics a Customer Journey Analytics. Al migrar proyectos a Customer Journey Analytics, los recursos se asignan de un grupo de informes de Adobe Analytics a una vista de datos de Customer Journey Analytics. Los proyectos se migran a Customer Journey Analytics desde la interfaz de Adobe Analytics. [Más información](https://experienceleague.adobe.com/docs/analytics/admin/admin-tools/component-migration/prepare-component-migration.html?lang=es) | N/A | 9 de octubre de 2023 |
 
 {style="table-layout:auto"}
 
